--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,3 +1,5 @@
-<h1>user#index</h1>
-
-<p><%= @user.email %></p>
+<h1>Your profile</h1>
+<p>@<%= @ftuser.username %></p>
+<% @experiences.each do |exp| %>
+    <%= exp.title %>
+<% end %>
