--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -3,8 +3,9 @@
 </ul>
 <ul>
     <% if user_signed_in? %>
-    <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
+      <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
+      <li><%= link_to 'Edit', profiles_path %></li>
     <% else %>
-    <li><%= link_to 'Sign In', new_user_session_path %></li>
+      <li><%= link_to 'Sign In', new_user_session_path %></li>
     <% end %>
 </ul>
